--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+
+<!--Author :SHRIHARI SHETTY -->
+
 <!DOCTYPE html>
 <html>
 <head>
+	
 	<title>Circles</title>
 	<script type="text/javascript" src="paper-full.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/1.1.28/howler.js"></script>
